# pico-mfrc522

./: .gitignore  CMakeLists.txt  README.md  example.c  mfrc522.c  mfrc522.h  pico_MFRC522.c
